@@ -100,9 +100,36 @@ public class Graph {
 	 * @param condition the condition
 	 * @return the integer
 	 */
-	public Integer numberOfTrips(String start, String finish, StopsCondition condition) {
+	public Optional<Integer> numberOfTrips(String start, String finish, StopsCondition condition) {
 		Set<Path> queueRoutes = buildRoutesFromTo(start, finish);
-		return new Long(queueRoutes.stream().map(Path::size).filter(condition::applyCondition).count()).intValue();
+		int result = new Long(queueRoutes.stream().map(Path::size).filter(condition::applyCondition).count()).intValue();
+		return result > 0 ? Optional.ofNullable(Integer.valueOf(result)) : Optional.empty();
+	}
+
+	/**
+	 * Shortest route.
+	 *
+	 * @param start the start
+	 * @param finish the finish
+	 * @return the integer
+	 */
+	public Optional<Integer> shortestRoute(String start, String finish) {
+		Set<Path> routes = buildRoutesFromTo(start, finish);
+		return routes.stream().map(Path::weight).min((int1, int2) -> Integer.compare(int1, int2));
+	}
+
+	/**
+	 * Amount routes.
+	 *
+	 * @param start the start
+	 * @param finish the finish
+	 * @param condition the condition
+	 * @return the optional
+	 */
+	public Optional<Integer> amountRoutes(String start, String finish, StopsCondition condition) {
+		Set<Path> routes = buildRoutesFromTo(start, finish);
+		int result = new Long(routes.stream().map(Path::weight).filter(condition::applyCondition).count()).intValue();
+		return result > 0 ? Optional.ofNullable(Integer.valueOf(result)) : Optional.empty();
 	}
 
 	/**
@@ -129,7 +156,7 @@ public class Graph {
 	 * @param startNode the start node
 	 * @param finish the finish
 	 */
-	public void recursiveBuild(Set<Path> queueRoutes, Path path, Route startNode, String finish){
+	private void recursiveBuild(Set<Path> queueRoutes, Path path, Route startNode, String finish){
 		path.add(startNode);
 		Set<Route> routesStart = routes.get(startNode.getTo());
 		for (Route route : routesStart) {
@@ -149,17 +176,5 @@ public class Graph {
 				}
 			}
 		}
-	}
-
-	/**
-	 * Shortest route.
-	 *
-	 * @param start the start
-	 * @param finish the finish
-	 * @return the integer
-	 */
-	public Optional<Integer> shortestRoute(String start, String finish) {
-		Set<Path> routes = buildRoutesFromTo(start, finish);
-		return routes.stream().map(Path::weight).min((int1, int2) -> Integer.compare(int1, int2));
 	}
 }
